# Unifi

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/unifi_agent/: __init__.py  __main__.py  app.py  cli.py
src/unifi_agent/api/: metrics.py  routes.py
src/unifi_agent/core/: config.py  logging.py  models.py  utils.py
src/unifi_agent/services/: ai_analyzer.py  api_keys.py  backup.py  unifi_client.py
src/unifi_agent/templates/: index.html
templates/: index.html
tests/: conftest.py  test_api_keys.py  test_backup.py  test_metrics_logging.py  test_models.py  test_routes.py  test_utils.py
